<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="lk.handyhub.handyhub.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="lk.handyhub.handyhub.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_myjobs"
        android:name="lk.handyhub.handyhub.ui.myjobs.MyJobsFragment"
        android:label="@string/menu_MyJobs"
        tools:layout="@layout/fragment_myjobs" />

    <fragment
        android:id="@+id/nav_myhirings"
        android:name="lk.handyhub.handyhub.ui.myhirings.MyHiringFragment"
        android:label="@string/menu_MyHiring"
        tools:layout="@layout/fragment_my_hiring" />
</navigation>