<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signInLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/background"
        tools:context=".SignInFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="75dp"
            android:text="@string/text_signin"
            android:textColor="@color/light_blue"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="203dp"
            android:layout_height="172dp"
            android:layout_marginTop="30dp"
            android:src="@mipmap/transparent_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2" />

        <EditText
            android:id="@+id/mobile2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_mobile"
            android:inputType="phone"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="#757575"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView3" />

        <EditText
            android:id="@+id/password2"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="50dp"
            android:paddingBottom="12dp"
            android:textColor="@color/dark_blue"
            android:textColorHint="#757575"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mobile2" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="60dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="60dp"
            android:backgroundTint="@color/dark_orange"
            android:text="@string/btn_SignIn"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password2" />

        <TextView
            android:id="@+id/textbtn1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="50dp"
            android:text="@string/btn_gotoCreateAccount"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSignIn"
            app:layout_constraintVertical_bias="0.059" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
