<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FBF0DC"
    android:padding="20dp">

    <Button
        android:id="@+id/btnPayNow"
        android:layout_width="140dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/brn_setCharge"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/setChargeText"
        app:layout_constraintTop_toBottomOf="@+id/datetimeView"/>


    <Button
        android:id="@+id/btnAccept"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/dark_orange"
        android:text="@string/brn_jobAccepted"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datetimeView" />

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:backgroundTint="@color/quantum_googred400"
        android:text="@string/brn_cancelJob"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datetimeView" />

    <EditText
        android:id="@+id/setChargeText"
        android:layout_width="175dp"
        android:layout_height="47dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edittext_background"
        android:hint="@string/editTExt_setprice"
        android:inputType="numberDecimal"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/datetimeView"
        android:visibility="gone" />

    <TextView
        android:id="@+id/worker_name"
        android:layout_width="227dp"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="TextView"
        android:textColor="@color/light_blue"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/worker_mobile"
        android:layout_width="231dp"
        android:layout_height="23dp"
        android:layout_marginStart="10dp"
        android:text="TextView"
        android:textColor="@color/place_autocomplete_prediction_secondary_text"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_name" />

    <ImageView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/worker_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/call" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView2"
        android:layout_width="0dp"
        android:layout_height="300dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="10dp"
        android:contentDescription="@string/map"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_mobile" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="@string/location_cus"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/mapView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_mobile" />

    <ImageView
        android:id="@+id/imageView8"
        android:layout_width="36dp"
        android:layout_height="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapView2"
        app:srcCompat="@mipmap/calendar" />

    <TextView
        android:id="@+id/datetimeView"
        android:layout_width="0dp"
        android:layout_height="37dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="10dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toEndOf="@+id/imageView8"
        app:layout_constraintTop_toBottomOf="@+id/mapView2" />

</androidx.constraintlayout.widget.ConstraintLayout>
