<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FBF0DC"
    android:padding="20dp">


    <Button
        android:id="@+id/btnPayNow"
        android:layout_width="143dp"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/light_blue"
        android:text="@string/pay_and_confirm"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.181"
        app:layout_constraintStart_toEndOf="@+id/charge_view"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/worker_name"
        android:layout_width="227dp"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:text="TextView"
        android:textColor="@color/light_blue"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_title" />

    <TextView
        android:id="@+id/worker_mobile"
        android:layout_width="231dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:text="TextView"
        android:textColor="@color/place_autocomplete_prediction_secondary_text"
        android:textSize="16sp"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_name" />

    <ImageView
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/worker_name"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/call" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_charge"
        android:textColor="@color/place_autocomplete_prediction_secondary_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worker_mobile" />

    <TextView
        android:id="@+id/charge_view"
        android:layout_width="190dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="10dp"
        android:text="@string/charge_data"
        android:textColor="@color/dark_orange"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.533" />

    <TextView
        android:id="@+id/worker_title"
        android:layout_width="231dp"
        android:layout_height="28dp"
        android:layout_marginStart="10dp"
        android:text="TextView"
        android:textSize="18sp"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
