<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobileVerificationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background"
    android:textAlignment="center"
    tools:context=".MobileVerificationFragment">

    <Button
        android:id="@+id/btnCreateAccount3"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="150dp"
        android:backgroundTint="@color/dark_orange"
        android:text="@string/btn_submit"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.567" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="388dp"
        android:layout_height="63dp"
        android:layout_marginTop="100dp"
        android:baselineAligned="false"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <EditText
            android:id="@+id/otp1"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:hint="@string/asterisk"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp2"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:hint="@string/asterisk"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp3"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:hint="@string/asterisk"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp4"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:hint="@string/asterisk"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp5"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:hint="@string/asterisk"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/otp6"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/otp_background"
            android:gravity="center"
            android:hint="@string/asterisk"
            android:inputType="number"
            android:maxLength="1"
            android:textColor="@color/light_blue"
            android:textSize="20sp"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="75dp"
        android:text="@string/text_mobileVerification"
        android:textColor="@color/light_blue"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="300dp"
        android:layout_height="248dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:src="@mipmap/verify_img"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:src="@mipmap/verify_code" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:text="@string/otp_des"
        android:textAlignment="center"
        android:textColor="@color/light_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4" />
</androidx.constraintlayout.widget.ConstraintLayout>
